--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="logo">FinTech Masters</a>
+            <a href="#" class="logo">FinTech Masters 핀테크 마스터스</a>
             <div class="nav-links">
                 <a href="#features">커리큘럼</a>
                 <a href="#pricing">수강료</a>
